syntax = "proto3";

package chat_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/Murat993/chat-server/pkg/chat_v1;chat_v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Chat API"
    version: "1.0.0"
    contact: {
      name: "Murat N"
      email: "murat@nyssambayev.dev"
    };
  };

  host: "localhost:8080",
  schemes: HTTP,
  schemes: HTTPS,
  consumes: "application/json",
  produces: "application/json",
};

service ChatV1 {
  // Создание чата
  rpc Create(CreateRequest) returns (CreateResponse){
    option (google.api.http) =  {
      post: "/chat/v1/create"
      body: "*"
    };
  };
  // Отправка сообщения
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty){
    option (google.api.http) =  {
      post: "/chat/v1/send-message"
      body: "*"
    };
  };
  // Удаление чата
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty){
    option (google.api.http) =  {
      delete: "/chat/v1"
    };
  };
}

message Chat {
  ChatInfo info = 1;
  google.protobuf.Timestamp timestamp = 2;
}

message ChatInfo {
  string from = 1;
  string text = 2 [(validate.rules).string = {min_len: 1, max_len: 50}];
}

message CreateRequest {
  repeated string usernames = 1;
}

message CreateResponse {
  int64 id = 1;
}

message DeleteRequest {
  int64 id = 1;
}

message SendMessageRequest {
    Chat chat = 1;
}

